fixing bin logo not showing on 600px media query css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 /* Update these before going live
- two dates on flyer on home page
-
+ two dates on flyer on home pageee
 */
 
 body {
